moved from using php to using ssi (yosh insisted ;)

--- a/about.html
+++ b/about.html
@@ -1,3 +1,6 @@
+<!--#include virtual="/includes/header.inc" -->
+<!--#include virtual="/includes/menu.inc" -->
+
 <div class="heading"><span class="title">About GIMP</span><span class="date"></span>&nbsp;</div>
 <div class="item">
   <p>
@@ -84,3 +87,7 @@ snipped recipe for oven baked chicken
 19:36  + carol wonders what the chances are that sjburgesilicious is the original author even
 19:36  + carol bluwahhahahahs all over the floor
 --->
+
+
+<!--#include virtual="/includes/linkbar.inc" -->
+<!--#include virtual="/includes/footer.inc" -->
