--- a/team.html
+++ b/team.html
@@ -1,3 +1,6 @@
+<!--#include virtual="/includes/header.inc" -->
+<!--#include virtual="/includes/menu.inc" -->
+
 <div class="heading"><span class="title">The GIMP Core Team</span><span class="date"></span>&nbsp;</div>
 <div class="item">
     <ul>
@@ -14,3 +17,5 @@
     </ul>
 </div>
 
+<!--#include virtual="/includes/linkbar.inc" -->
+<!--#include virtual="/includes/footer.inc" -->
