--- a/about.html
+++ b/about.html
@@ -56,9 +56,9 @@
       <li>Much, much more!</li>
     </ul>
 </div>
-<!---How About The GIMP gets updated.  first you send it to the developer list --->
-<!---Then you let them hammer out the guilt on #gimp:                          --->
-<!---
+<!-- How About The GIMP gets updated.  first you send it to the developer list -->
+<!-- Then you let them hammer out the guilt on #gimp:                          -->
+<!--
 19:00 (sjburges) an extremely capable piece of software with many capabilities...
 19:02 (UnNamed) sjburges: what?
 19:02 (sjburges) carol's description of gimp
@@ -86,7 +86,7 @@ snipped recipe for oven baked chicken
 
 19:36  + carol wonders what the chances are that sjburgesilicious is the original author even
 19:36  + carol bluwahhahahahs all over the floor
---->
+-->
 
 
 <!--#include virtual="/includes/linkbar.inc" -->
