changed layout of subpages

--- a/about.html
+++ b/about.html
@@ -1,7 +1,8 @@
 <!--#include virtual="/includes/header.inc" -->
 <!--#include virtual="/includes/menu.inc" -->
 
-<div class="heading"><span class="title">About GIMP</span><span class="date"></span>&nbsp;</div>
+<div class="heading">About GIMP</div>
+<div class="subtitle">Introduction to the GIMP</div>
 <div class="item">
   <p>
     GIMP is an acronym for GNU Image Manipulation Program. It
@@ -29,24 +30,24 @@
   </p>
 </div>
 
-<div class="heading"><span class="title">Features and Capabilities</span><span class="date"></span>&nbsp;</div>
+<div class="subtitle">Features and Capabilities</div>
 <div class="item">
   <p>
     This is only a very quickly thrown together list of GIMP features.
   </p>
-  <div class="subtitle">Painting</div>
+  Painting
     <ul>
       <li>Full suite of painting tools including Brush, Pencil, Airbrush, Clone, etc.</li>
       <li>Sub-pixel sampling for all paint tools for high quality anti-aliasing</li>
       <li>Extremely powerful gradient editor and blend tool</li>
       <li>Supports custom brushes and patterns</li>
     </ul>
-  <div class="subtitle">System</div>
+  System
     <ul>
       <li>Tile based memory managent so image size is limited only by available disk space</li>
       <li>Virtually unlimited number of images open at one time</li>
     </ul>
-  <div class="subtitle">Advanced Manipulation</div>
+  Advanced Manipulation
     <ul>
       <li>Full alpha channel support</li>
       <li>Layers and channels</li>
@@ -55,18 +56,18 @@
       <li>Selection tools including rectangle, ellipse, free, fuzzy, bezier and intelligent</li>
       <li>Quickmask to paint a selection.</li>
     </ul>
-  <div class="subtitle">Extensible</div>
+  Extensible
     <ul>
       <li>A Procedural Database for calling internal GIMP functions from external programs as in Script-fu</li>
       <li>Advanced scripting capabilities</li>
       <li>Plug-ins which allow for the easy addition of new file formats and new effect filters</li>
       <li>Over 100 plugins already available</li>
     </ul>
-  <div class="subtitle">Animation</div>
+  Animation
     <ul>
       <li>Load and save animations in a convenient frame-as-layer format</li>
     </ul>
-  <div class="subtitle">File Handling</div>
+  File Handling
     <ul>
       <li>File formats supported include gif, jpg, png, xpm, tiff, tga, mpeg, ps, pdf, pcx, bmp, and many others</li>
       <li>Load, display, convert, save to many file formats</li>
