testing the new subpage layout on resources.html

--- a/resources.html
+++ b/resources.html
@@ -1,10 +1,38 @@
 <!--#include virtual="/includes/header.inc" -->
 <!--#include virtual="/includes/menu.inc" -->
 
-<div class="heading"><span class="title">Resources</span><span class="date"></span>&nbsp;</div>
-<div class="item">
-
-</div>
+<div class="heading">Resources</div>
+<div class="subtitle">Brushes</div>
+<p>
+  Some text about brushes, Some text about brushes, Some text about brushes, Some text about brushes, Some text about brushes, Some text about brushes,
+  Some text about brushes, Some text about brushes, Some text about brushes, Some text about brushes, Some text about brushes, Some text about brushes,
+</p>
+<ul>
+  <li>Some list item</li>
+  <li>Some list item</li>
+  <li>Some list item</li>
+  <li>Some list item</li>
+</ul>
+<p>
+  Some text about brushes, Some text about brushes, Some text about brushes, Some text about brushes, Some text about brushes, Some text about brushes,
+  Some text about brushes, Some text about brushes, Some text about brushes, Some text about brushes, Some text about brushes, Some text about brushes,
+</p>
+<div class="subtitle">Palettes</div>
+<p>
+  Some text about palettes, Some text about palettes, Some text about palettes, Some text about palettes, Some text about palettes, Some text about palettes,
+  Some text about palettes, Some text about palettes, Some text about palettes, Some text about palettes, Some text about palettes, Some text about palettes,
+  Some text about palettes, Some text about palettes, Some text about palettes, Some text about palettes, Some text about palettes, Some text about palettes,
+  Some text about palettes, Some text about palettes, Some text about palettes, Some text about palettes, Some text about palettes, Some text about palettes,
+  Some text about palettes, Some text about palettes, Some text about palettes, Some text about palettes, Some text about palettes, Some text about palettes,
+</p>
+<div class="subtitle">Patterns</div>
+<p>
+  Some text about patterns, Some text about patterns, Some text about patterns, Some text about patterns, Some text about patterns, Some text about patterns,
+  Some text about patterns, Some text about patterns, Some text about patterns, Some text about patterns, Some text about patterns, Some text about patterns,
+  Some text about patterns, Some text about patterns, Some text about patterns, Some text about patterns, Some text about patterns, Some text about patterns,
+  Some text about patterns, Some text about patterns, Some text about patterns, Some text about patterns, Some text about patterns, Some text about patterns,
+  Some text about patterns, Some text about patterns, Some text about patterns, Some text about patterns, Some text about patterns, Some text about patterns,
+</p>
 
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
