added a link-in-text test

--- a/resources.html
+++ b/resources.html
@@ -6,6 +6,7 @@
 <p>
   Some text about brushes, Some text about brushes, Some text about brushes, Some text about brushes, Some text about brushes, Some text about brushes,
   Some text about brushes, Some text about brushes, Some text about brushes, Some text about brushes, Some text about brushes, Some text about brushes,
+  <a href="FIXME">this is a link in text</a>.
 </p>
 <ul>
   <li>Some list item</li>
