--- a/about.html
+++ b/about.html
@@ -3,82 +3,91 @@
 
 <div class="heading">About GIMP</div>
 <div class="subtitle">Introduction to the GIMP</div>
-<div class="item">
-  <p>
-    GIMP is an acronym for GNU Image Manipulation Program. It
-    is a freely distributed program for such tasks
-    as photo retouching, image composition and image authoring.
-  </p>
-  <p>
-    It has many capabilities. It 
-    can be used as a simple paint program, an expert quality photo retouching 
-    program, an online batch processing system, a mass production image 
-    renderer, an image format converter, etc.
-  </p>  
-  <p>
-    GIMP is expandable and extensible. It is designed to be 
-    augmented with plug-ins and extensions to do just about anything. The 
-    advanced scripting interface allows everything from the simplest task to 
-    the most complex image manipulation procedures to be easily scripted. 
-  </p>  
-  <p>
-    GIMP is written and developed under X11 on UNIX platforms.
-    There is an <a href="http://www.netlabs.org/gimp/">OS/2 port</a> in development. 
-    There is also a native <a href="http://www.gimp.org/win32/">win32 port</a>.
-    And some people have reported success in getting GIMP to run in
-    <a href="http://www.macgimp.org/">MacOS X</a>.
-  </p>
-</div>
+<p>
+  GIMP is an acronym for GNU Image Manipulation Program. It
+  is a freely distributed program for such tasks
+  as photo retouching, image composition and image authoring.
+</p>
+<p>
+  It has many capabilities. It 
+  can be used as a simple paint program, an expert quality photo retouching 
+  program, an online batch processing system, a mass production image 
+  renderer, an image format converter, etc.
+</p>  
+<p>
+  GIMP is expandable and extensible. It is designed to be 
+  augmented with plug-ins and extensions to do just about anything. The 
+  advanced scripting interface allows everything from the simplest task to 
+  the most complex image manipulation procedures to be easily scripted. 
+</p>  
+<p>
+  GIMP is written and developed under X11 on UNIX platforms.
+  There is an <a href="http://www.netlabs.org/gimp/">OS/2 port</a> in development. 
+  There is also a native <a href="http://www.gimp.org/win32/">win32 port</a>.
+  And some people have reported success in getting GIMP to run in
+  <a href="http://www.macgimp.org/">MacOS X</a>.
+</p>
 
 <div class="subtitle">Features and Capabilities</div>
-<div class="item">
-  <p>
-    This is only a very quickly thrown together list of GIMP features.
-  </p>
-  Painting
-    <ul>
-      <li>Full suite of painting tools including Brush, Pencil, Airbrush, Clone, etc.</li>
-      <li>Sub-pixel sampling for all paint tools for high quality anti-aliasing</li>
-      <li>Extremely powerful gradient editor and blend tool</li>
-      <li>Supports custom brushes and patterns</li>
-    </ul>
-  System
-    <ul>
-      <li>Tile based memory managent so image size is limited only by available disk space</li>
-      <li>Virtually unlimited number of images open at one time</li>
-    </ul>
-  Advanced Manipulation
-    <ul>
-      <li>Full alpha channel support</li>
-      <li>Layers and channels</li>
-      <li>Multiple Undo/Redo (limited only by diskspace)</li>
-      <li>Transformation tools including rotate, scale, shear and flip</li>
-      <li>Selection tools including rectangle, ellipse, free, fuzzy, bezier and intelligent</li>
-      <li>Quickmask to paint a selection.</li>
-    </ul>
-  Extensible
-    <ul>
-      <li>A Procedural Database for calling internal GIMP functions from external programs as in Script-fu</li>
-      <li>Advanced scripting capabilities</li>
-      <li>Plug-ins which allow for the easy addition of new file formats and new effect filters</li>
-      <li>Over 100 plugins already available</li>
-    </ul>
-  Animation
-    <ul>
-      <li>Load and save animations in a convenient frame-as-layer format</li>
-    </ul>
-  File Handling
-    <ul>
-      <li>File formats supported include gif, jpg, png, xpm, tiff, tga, mpeg, ps, pdf, pcx, bmp, and many others</li>
-      <li>Load, display, convert, save to many file formats</li>
-    </ul>
-    <p>Much, much more!
-	</p>
-    </ul>
-</div>
-<!-- How About The GIMP gets updated.  first you paste it from the current site-->
-<!-- Next you send it to the developer list 								   -->
-<!-- Then you let them hammer out the guilt on #gimp:                          -->
+<p>
+  This is only a very quickly thrown together list of GIMP features.
+</p>
+<p>
+Painting
+</p>
+<ul>
+  <li>Full suite of painting tools including Brush, Pencil, Airbrush, Clone, etc.</li>
+  <li>Sub-pixel sampling for all paint tools for high quality anti-aliasing</li>
+  <li>Extremely powerful gradient editor and blend tool</li>
+  <li>Supports custom brushes and patterns</li>
+</ul>
+<p>
+System
+</p>
+<ul>
+  <li>Tile based memory managent so image size is limited only by available disk space</li>
+  <li>Virtually unlimited number of images open at one time</li>
+</ul>
+<p>
+Advanced Manipulation
+</p>
+<ul>
+  <li>Full alpha channel support</li>
+  <li>Layers and channels</li>
+  <li>Multiple Undo/Redo (limited only by diskspace)</li>
+  <li>Transformation tools including rotate, scale, shear and flip</li>
+  <li>Selection tools including rectangle, ellipse, free, fuzzy, bezier and intelligent</li>
+  <li>Quickmask to paint a selection.</li>
+</ul>
+<p>
+Extensible
+</p>
+<ul>
+  <li>A Procedural Database for calling internal GIMP functions from external programs as in Script-fu</li>
+  <li>Advanced scripting capabilities</li>
+  <li>Plug-ins which allow for the easy addition of new file formats and new effect filters</li>
+  <li>Over 100 plugins already available</li>
+</ul>
+<p>
+Animation
+</p>
+<ul>
+  <li>Load and save animations in a convenient frame-as-layer format</li>
+</ul>
+<p>
+File Handling
+</p>
+<ul>
+  <li>File formats supported include gif, jpg, png, xpm, tiff, tga, mpeg, ps, pdf, pcx, bmp, and many others</li>
+  <li>Load, display, convert, save to many file formats</li>
+</ul>
+<p>
+  Much, much more!
+</p>
+
+<!-- How About The GIMP gets updated.  first you paste it from the current site -->
+<!-- Next you send it to the developer list                                     -->
+<!-- Then you let them hammer out the guilt on #gimp:                           -->
 <!--
 19:00 (sjburges) an extremely capable piece of software with many capabilities...
 19:02 (UnNamed) sjburges: what?
@@ -108,7 +117,6 @@ snipped recipe for oven baked chicken
 19:36  + carol wonders what the chances are that sjburgesilicious is the original author even
 19:36  + carol bluwahhahahahs all over the floor
 -->
-
 
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
