files modified to use the new subpage layout

--- a/macintosh.html
+++ b/macintosh.html
@@ -1,10 +1,7 @@
 <!--#include virtual="/includes/header.inc" -->
 <!--#include virtual="/includes/menu.inc" -->
 
-<div class="heading"><span class="title">GIMP for Macintosh</span><span class="date"></span>&nbsp;</div>
-<div class="item">
-
-</div>
+<div class="heading">GIMP for Macintosh</div>
 
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
