--- a/registry.html
+++ b/registry.html
@@ -1,10 +1,8 @@
 <!--#include virtual="/includes/header.inc" -->
 <!--#include virtual="/includes/menu.inc" -->
 
-<div class="heading"><span class="title">Plug-in Registry</span><span class="date"></span>&nbsp;</div>
-<div class="item">
+<div class="heading">Plug-in Registry</div>
 
-</div>
 
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
