--- a/team.html
+++ b/team.html
@@ -1,21 +1,17 @@
 <!--#include virtual="/includes/header.inc" -->
 <!--#include virtual="/includes/menu.inc" -->
 
-<div class="heading"><span class="title">The GIMP Core Team</span><span class="date"></span>&nbsp;</div>
-<div class="item">
-    <ul>
-      <li>Release Maintainer, N. N.</li>
-    </ul>
-</div>
-
-<div class="heading"><span class="title">The GIMP Web Team</span><span class="date"></span>&nbsp;</div>
-<div class="item">
-    <ul>
-      <li>Web Designer, Ville Pätsi</li>
-      <li>Web Technician, Henrik Brix Andersen</li>
-      <li>Web Coordinator, Carol Spears</li>
-    </ul>
-</div>
+<div class="heading">The GIMP Team</div>
+<div class="subtitle">Core Team</div>
+<ul>
+  <li>Release Maintainer, N. N.</li>
+</ul>
+<div class="subtitle">Web Team</div>
+<ul>
+  <li>Web Designer, Ville Pätsi</li>
+  <li>Web Technician, Henrik Brix Andersen</li>
+  <li>Web Coordinator, Carol Spears</li>
+</ul>
 
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
