--- a/template.html
+++ b/template.html
@@ -1,10 +1,11 @@
 <!--#include virtual="/includes/header.inc" -->
 <!--#include virtual="/includes/menu.inc" -->
 
-<div class="heading"><span class="title">Title</span><span class="date">Optional date</span>&nbsp;</div>
-<div class="item">
+<div class="heading">Title goes here</div>
+<div class="subtitle">Subtitle goes here</div>
+<p>
   Text goes here...
-</div>
+</p>
 
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
