--- a/authoring.html
+++ b/authoring.html
@@ -1,10 +1,7 @@
 <!--#include virtual="/includes/header.inc" -->
 <!--#include virtual="/includes/menu.inc" -->
 
-<div class="heading"><span class="title">Script Authoring</span><span class="date"></span>&nbsp;</div>
-<div class="item">
-
-</div>
+<div class="heading">Script Authoring</div>
 
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
