--- a/links.html
+++ b/links.html
@@ -1,10 +1,7 @@
 <!--#include virtual="/includes/header.inc" -->
 <!--#include virtual="/includes/menu.inc" -->
 
-<div class="heading"><span class="title">GIMP Links</span><span class="date"></span>&nbsp;</div>
-<div class="item">
-
-</div>
+<div class="heading">GIMP Links</div>
 
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
