--- a/tutorials.html
+++ b/tutorials.html
@@ -1,10 +1,7 @@
 <!--#include virtual="/includes/header.inc" -->
 <!--#include virtual="/includes/menu.inc" -->
 
-<div class="heading"><span class="title">Tutorials</span><span class="date"></span>&nbsp;</div>
-<div class="item">
-
-</div>
+<div class="heading">Tutorials</div>
 
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
