added fake content to provide a template for Martijn

--- a/links.html
+++ b/links.html
@@ -2,6 +2,14 @@
 <!--#include virtual="/includes/menu.inc" -->
 
 <div class="heading">GIMP Links</div>
+<div class="subtitle">Tutorials</div>
+<p>
+  Text goes here
+</p>
+<div class="subtitle">Galleries</div>
+<p>
+  Text goes here
+</p>
 
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
