minor bug fix to new tutorial layout

--- a/tutorials/Anti-Aliased_Treshold/index.html
+++ b/tutorials/Anti-Aliased_Treshold/index.html
@@ -47,5 +47,5 @@
   Tutorial &copy; 2001 Ville Pätsi <a href="mailto:drc@nospam.gnome.org">drc@gnome.org</a>
 </div>
 
-<!--#include virtual="/includes/tut_nav_bar.inc" -->
+<!--#include virtual="/includes/tutnavbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
