--- a/about.html
+++ b/about.html
@@ -2,121 +2,78 @@
 <!--#include virtual="/includes/menu.inc" -->
 
 <div class="heading">About GIMP</div>
-<div class="subtitle">Introduction to the GIMP</div>
+<div class="subtitle"><a href="about/introduction.html">Introduction to The GIMP</a></div>
 <p>
   GIMP is an acronym for GNU Image Manipulation Program. It
   is a freely distributed program for such tasks
   as photo retouching, image composition and image authoring.
+  The terms of usage and rules about copying are clearly listed in the
+  <a name="src-COPYING" href="about/COPYING">GNU GENERAL PUBLIC LICENSE</a>.
 </p>
+<div class="subtitle">Important URLs</div>
 <p>
-  It has many capabilities. It 
-  can be used as a simple paint program, an expert quality photo retouching 
-  program, an online batch processing system, a mass production image 
-  renderer, an image format converter, etc.
-</p>  
-<p>
-  GIMP is expandable and extensible. It is designed to be 
-  augmented with plug-ins and extensions to do just about anything. The 
-  advanced scripting interface allows everything from the simplest task to 
-  the most complex image manipulation procedures to be easily scripted. 
-</p>  
-<p>
-  GIMP is written and developed under X11 on UNIX platforms.
-  There is an <a href="http://www.netlabs.org/gimp/">OS/2 port</a> in development. 
-  There is also a native <a href="http://www.gimp.org/win32/">win32 port</a>.
-  And some people have reported success in getting GIMP to run in
-  <a href="http://www.macgimp.org/">MacOS X</a>.
+  <ul>
+    <li><a href="http://www.gimp.org">The GNU Image Manipulation Program</a></li>
+    <li><a href="http://www.gnu.org/">GNU Project</a></li>
+    <li><a href="http://bug.gimp.org/">GIMP Bugzilla</a></li>
+    <li><a href="http://www.gtk.org/">The Gimp Tool Kit</a></li>
+  </ul>
 </p>
-
-<div class="subtitle">Features and Capabilities</div>
+<div class="subtitle"><a href="about/awards.html">Awards won by The GIMP</a></div>
+<div class="subtitle">The GIMP in the Real World</div>
+<p>The GIMP In Education</p>
 <p>
-  This is only a very quickly thrown together list of GIMP features.
+  <ul>
+    <li><a href="FIXME">some news or report item</a></li>
+    <li><a href="FIXME">some news or report item</a></li>
+    <li><a href="FIXME">some news or report item</a></li>
+  </ul>
 </p>
+<p>The GIMP On the Web</p>
 <p>
-Painting
+  <ul>
+    <li><a href="http://www.flamingtext.com">Flamming Text Logo Generator</a></li>
+    <li><a href="http://www.cooltext.com">Cooltext Logo Generator</a></li>
+  </ul>
 </p>
-<ul>
-  <li>Full suite of painting tools including Brush, Pencil, Airbrush, Clone, etc.</li>
-  <li>Sub-pixel sampling for all paint tools for high quality anti-aliasing</li>
-  <li>Extremely powerful gradient editor and blend tool</li>
-  <li>Supports custom brushes and patterns</li>
-</ul>
+<p>The GIMP In Film</p>
 <p>
-System
+  <ul>
+    <li><a href="http://www.linuxjournal.com/article.php?sid=6148">Linux and &lt;i&gt;Scoopy-Doo&lt;/i&gt;</a></li>
+  </ul>
 </p>
-<ul>
-  <li>Tile based memory managent so image size is limited only by available disk space</li>
-  <li>Virtually unlimited number of images open at one time</li>
-</ul>
+<p>The GIMP In Medicine &amp; Science</p>
 <p>
-Advanced Manipulation
+  <ul>
+    <li><a href="http://lists.xcf.berkeley.edu/lists/gimp-developer/2001-August/005513.html">Particle Size Analysis</a>
+    <li><a href="FIXME">The GIMP edge detect for X-Rays</a></li>
+  </ul>
 </p>
-<ul>
-  <li>Full alpha channel support</li>
-  <li>Layers and channels</li>
-  <li>Multiple Undo/Redo (limited only by diskspace)</li>
-  <li>Transformation tools including rotate, scale, shear and flip</li>
-  <li>Selection tools including rectangle, ellipse, free, fuzzy, bezier and intelligent</li>
-  <li>Quickmask to paint a selection.</li>
-</ul>
+<p>The GIMP In Electronics</p>
+<p>The GIMP In the Corporate World</p>
+<p>The GIMP In the Computer World</p>
 <p>
-Extensible
+  <ul>
+    <li><a href="http://www.advogato.org/article/550.html">The GIMP Transcends Bias</a>
+  </ul>
 </p>
-<ul>
-  <li>A Procedural Database for calling internal GIMP functions from external programs as in Script-fu</li>
-  <li>Advanced scripting capabilities</li>
-  <li>Plug-ins which allow for the easy addition of new file formats and new effect filters</li>
-  <li>Over 100 plugins already available</li>
-</ul>
+<p>The GIMP In Commercial Art</p>
+<div class="subtitle"><a href="about/history.html">History of The GIMP</a></div>
 <p>
-Animation
+  <ul>
+    <li><a href="http://www.gimp.org/~sjburges/gimp-history.html">ancient history</a>
+    <li><a name="src-change10" href="about/ChangeLog.pre-1-0">ChangeLog.pre-1-0</a></li>
+    <li><a name="src-change12" href="about/ChangeLog.pre-1-2">ChangeLog.pre-1-2</a></li>
+  </ul>
 </p>
-<ul>
-  <li>Load and save animations in a convenient frame-as-layer format</li>
-</ul>
-<p>
-File Handling
+<div class="subtitle">The GIMP Authors</div>
+  <ul>
+    <li><a name="src-authors" href="about/AUTHORS">Authors and Contributors</a></li>
+    <li><a name="src-maintainers" href="about/MAINTAINERS">Maintainers</a></li>
+    <li><a name="src-pmaintainers" href="about/PLUGIN_MAINTAINERS">Plug-in Maintainers</a></li>
+  </ul>
 </p>
-<ul>
-  <li>File formats supported include gif, jpg, png, xpm, tiff, tga, mpeg, ps, pdf, pcx, bmp, and many others</li>
-  <li>Load, display, convert, save to many file formats</li>
-</ul>
-<p>
-  Much, much more!
-</p>
-
-<!-- How About The GIMP gets updated.  first you paste it from the current site -->
-<!-- Next you send it to the developer list                                     -->
-<!-- Then you let them hammer out the guilt on #gimp:                           -->
-<!--
-19:00 (sjburges) an extremely capable piece of software with many capabilities...
-19:02 (UnNamed) sjburges: what?
-19:02 (sjburges) carol's description of gimp
-19:02 (sjburges) the rest of the document is about the same
-19:02 (UnNamed) sjburges: uum, it is called marketing
-19:03 (UnNamed) sjburges: like with everything
-19:03 (sjburges) we don't need to market it
-19:03 (fatjim) maybe carol /wants/ to?
-19:03 (sjburges) ok, but... damn ... its bad
-19:05 (sjburges) ok, its not that bad
-19:05 (sjburges) but it kinda makes me want to gag
-19:05 (sjburges) my god, thats stolen text???
-19:05 (CyBeR) so instead you want people to think it's a piece of crap because we never say it's good?
-19:06 (sjburges) its been on www.gimp.org all this time...
-19:06 (sjburges) CyBeR: I don't want people to think that "its a capable piece of software with capabilities"
-19:06 (sjburges) there's plenty of good concrete stuff to say
-19:06 (CyBeR) so what do you want people to think about gimp?
-19:06 (sjburges) but that's not carol's fault... she is just pointing out that the current one sucks
-19:06 (UnNamed) change the last capabilities to features
-19:07 (sjburges) I'll work on it and get her something better
-19:13 ::: patti [~patti@m196-35.dsl.tsoft.com] has joined #gimp
-19:13 (carol) sjburges: everything is my fault though ...
-
-snipped recipe for oven baked chicken
-
-19:36  + carol wonders what the chances are that sjburgesilicious is the original author even
-19:36  + carol bluwahhahahahs all over the floor
--->
-
+<div class="subtitle"><a href="about/screenshots.html">Screen Shots</a></div>
+<div class="subtitle"><a href="about/mediakit.html">Media Kit</a></div>
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
