added a more to the end of the introduction blurb to indicate that there is more elsewhere.

--- a/about.html
+++ b/about.html
@@ -9,6 +9,7 @@
   as photo retouching, image composition and image authoring.
   The terms of usage and rules about copying are clearly listed in the
   <a name="src-COPYING" href="about/COPYING">GNU GENERAL PUBLIC LICENSE</a>.
+  (<a href="about/introduction.html">more ...</a>)
 </p>
 <div class="subtitle">Important URLs</div>
 <p>
