added a bogus description

--- a/tutorials.html
+++ b/tutorials.html
@@ -4,7 +4,9 @@
 <div class="heading">Tutorials</div>
 <div class="subtitle">Photo Retouching</div>
 <p>
-  <a href="tutorials/Anti-Aliased_Treshold/">Anti-Aliased Treshold</a>
+  <a href="tutorials/Anti-Aliased_Treshold/">Anti-Aliased Treshold</a> Description goes here,
+  Description goes here, Description goes here, Description goes here, Description goes here, 
+  Description goes here, Description goes here, Description goes here, Description goes here, 
 </p>
 
 
