added "Maybe we should add an icon/image?"

--- a/tutorials.html
+++ b/tutorials.html
@@ -4,7 +4,7 @@
 <div class="heading">Tutorials</div>
 <div class="subtitle">Photo Retouching</div>
 <p>
-  <a href="tutorials/Anti-Aliased_Treshold/">Anti-Aliased Treshold</a> Description goes here,
+  <a href="tutorials/Anti-Aliased_Treshold/">Anti-Aliased Treshold</a> Maybe we should add an icon/image?
   Description goes here, Description goes here, Description goes here, Description goes here, 
   Description goes here, Description goes here, Description goes here, Description goes here, 
 </p>
