some missing </li>'s

--- a/about.html
+++ b/about.html
@@ -37,19 +37,19 @@
   </ul>
 <p>The GIMP In Medicine &amp; Science</p>
   <ul>
-    <li><a href="http://lists.xcf.berkeley.edu/lists/gimp-developer/2001-August/005513.html">Particle Size Analysis</a>
+    <li><a href="http://lists.xcf.berkeley.edu/lists/gimp-developer/2001-August/005513.html">Particle Size Analysis</a></li>
     <li><a href="FIXME">The GIMP edge detect for X-Rays</a></li>
   </ul>
 <p>The GIMP In Electronics</p>
 <p>The GIMP In the Corporate World</p>
 <p>The GIMP In the Computer World</p>
   <ul>
-    <li><a href="http://www.advogato.org/article/550.html">The GIMP Transcends Bias</a>
+    <li><a href="http://www.advogato.org/article/550.html">The GIMP Transcends Bias</a></li>
   </ul>
 <p>The GIMP In Commercial Art</p>
 <div class="subtitle"><a href="about/history.html">History of The GIMP</a></div>
   <ul>
-    <li><a href="http://www.gimp.org/~sjburges/gimp-history.html">ancient history</a>
+    <li><a href="http://www.gimp.org/~sjburges/gimp-history.html">ancient history</a></li>
     <li><a name="src-change10" href="about/ChangeLog.pre-1-0">ChangeLog.pre-1-0</a></li>
     <li><a name="src-change12" href="about/ChangeLog.pre-1-2">ChangeLog.pre-1-2</a></li>
   </ul>
