files modified to use the new headers. this allows the title to be set from subpages, as requested by carol

--- a/authoring.html
+++ b/authoring.html
@@ -1,4 +1,6 @@
-<!--#include virtual="/includes/header.inc" -->
+<!--#include virtual="/includes/header_pretitle.inc" -->
+<title>GIMP - Script Authoring</title>
+<!--#include virtual="/includes/header_posttitle.inc" -->
 <!--#include virtual="/includes/menu.inc" -->
 
 <div class="heading">Script Authoring</div>
