--- a/tutorials/Anti-Aliased_Treshold/index.html
+++ b/tutorials/Anti-Aliased_Treshold/index.html
@@ -1,4 +1,6 @@
-<!--#include virtual="/includes/header.inc" -->
+<!--#include virtual="/includes/header_pretitle.inc" -->
+<title>GIMP - Anti-Aliased Threshold Tutorial</title>
+<!--#include virtual="/includes/header_posttitle.inc" -->
 <div id="main">
 <div class="heading">Anti-Aliased Threshold Tutorial</div>
 
