--- a/about/mediakit.html
+++ b/about/mediakit.html
@@ -1,4 +1,6 @@
-<!--#include virtual="/includes/header.inc" -->
+<!--#include virtual="/includes/header_pretitle.inc" -->
+<title>GIMP - Mediakit</title>
+<!--#include virtual="/includes/header_posttitle.inc" -->
 <!--#include virtual="/includes/menu.inc" -->
 
 <div class="heading">Title goes here</div>
