--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
-<!--#include virtual="/includes/header.inc" -->
+<!--#include virtual="/includes/header_pretitle.inc" -->
+<title>GIMP - The GNU Image Manipulation Program</title>
+<!--#include virtual="/includes/header_posttitle.inc" -->
 <!--#include virtual="/includes/menu.inc" -->
 
 <!--#include virtual="/includes/news.inc" -->
