--- a/windows.html
+++ b/windows.html
@@ -1,4 +1,6 @@
-<!--#include virtual="/includes/header.inc" -->
+<!--#include virtual="/includes/header_pretitle.inc" -->
+<title>GIMP - GIMP for Windows</title>
+<!--#include virtual="/includes/header_posttitle.inc" -->
 <!--#include virtual="/includes/menu.inc" -->
 
 <div class="heading">GIMP for Windows</div>
