changed to use a p.images instead of div.images to inherit the margins from p

--- a/tutorials/Anti-Aliased_Treshold/index.html
+++ b/tutorials/Anti-Aliased_Treshold/index.html
@@ -12,20 +12,20 @@
 </p>
 
 <div class="subtitle">Problems with the threshold</div>
-<div class="images">
+<p class="images">
   <img src="original.jpg" alt=""/>
   <img src="threshold.jpg" alt=""/>
-</div>
+</p>
 <p>
   On the left you we see the original image that is about to be thresholded, and on the right side we see the result. The default settings
   for the Threshold plug-in were used (Image|Colors|Threshold). The resulting image is very blocky and aliased.
 </p>
 
 <div class="subtitle">The Curves Trick</div>
-<div class="images">
+<p class="images">
   <img src="curves.jpg" alt=""/>
   <img src="finished.jpg" alt=""/>
-</div>
+</p>
 <p>
   First duplicate the image layer by going to the layers dialog, making sure the image layer is selected, and clicking the duplicate button
   (fourth from the left). We can use the original layer for some color tricks later. Now the next thing is to desaturate the image 
@@ -37,9 +37,9 @@
 </p>
 
 <div class="subtitle">A neat addition</div>
-<div class="images">
+<p class="images">
   <img src="effect.jpg" alt=""/>
-</div>
+</p>
 <p>
   If you now take the original image layer, move it over the new one (make sure it has an alpha channel), and change its mode to "Color"
   in the layers dialog, you get nice results displayed above.
