fixed the placement of the authors copyright msg

--- a/tutorials/Anti-Aliased_Treshold/index.html
+++ b/tutorials/Anti-Aliased_Treshold/index.html
@@ -44,10 +44,16 @@
   If you now take the original image layer, move it over the new one (make sure it has an alpha channel), and change its mode to "Color"
   in the layers dialog, you get nice results displayed above.
 </p>
-
-  FIXME: What about the authors copyright?<br/>
-  Tutorial &copy; 2001 Ville Pätsi <a href="mailto:drc@nospam.gnome.org">drc@gnome.org</a>
 </div>
-
 <!--#include virtual="/includes/tutnavbar.inc" -->
-<!--#include virtual="/includes/footer.inc" -->
+    <div>
+      <span id="footerleft">
+        Tutorial &copy; 2001-2002 <a href="mailto:drc@nospam.gnome.org">Ville Pätsi</a>
+      </span>
+      <span id="footerright">
+        <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
+      </span>
+    </div>
+
+  </body>
+</html>
