ported the basics tutorial from current wgo to new layout

--- a/tutorials.html
+++ b/tutorials.html
@@ -4,6 +4,12 @@
 <!--#include virtual="/includes/menu.inc" -->
 
 <div class="heading">Tutorials</div>
+
+<div class="subtitle">Beginner</div>
+<p>
+  <a href="tutorials/The_Basics/">The Basics Tutorial</a>
+</p>
+
 <div class="subtitle">Photo Retouching</div>
 <p>
   <a href="tutorials/Anti-Aliased_Treshold/">Anti-Aliased Treshold</a> Maybe we should add an icon/image?
