oops. renamed the link

--- a/tutorials.html
+++ b/tutorials.html
@@ -7,7 +7,7 @@
 
 <div class="subtitle">Beginner</div>
 <p>
-  <a href="tutorials/The_Basics/">The Basics Tutorial</a>
+  <a href="tutorials/The_Basics/">The Basics</a>
 </p>
 
 <div class="subtitle">Photo Retouching</div>
