--- a/windows.html
+++ b/windows.html
@@ -3,7 +3,81 @@
 <!--#include virtual="/includes/header_posttitle.inc" -->
 <!--#include virtual="/includes/menu.inc" -->
 
-<div class="heading">GIMP for Windows</div>
+<h2 class="heading">GIMP for Windows</h2>
+
+<p>
+<em>Hi, Carol. Most of this stuff will move to their own pages.</em>
+</p>
+
+<p>
+  GIMP is developed mostly under Linux, but it may be compiled for other systems such as Windows too.
+</p>
+
+<p>
+<strong>WARNING: none of the GIMPs on these page are official. You take your own chances. The only official GIMPs are those available in source format (not executable) at <a href="ftp://ftp.gimp.org">ftp.gimp.org</a>.</strong>
+</p>
+
+<h3 class="subtitle">Download</h3>
+<p>
+   There is no official version of the GIMP for Windows, and www.gimp.org does not qualify any as such. However, Tor Lillqvist has been making builds for Windows for awhile now, and most Windows' versions of the GIMP are based on his builds.
+</p>
+
+<p>
+Go to <a href="http://www.gimp.org/~tml/gimp/win32/downloads.html">Tor's download page</a> in order to download his sources or his executables (programs that can be run).
+</p>
+
+<p>
+The easiest GIMP download can probably be found at <a href="http://www2.arnes.si/~sopjsimo/gimp/">Jernej Simoncic's download page</a>.
+</p>
+
+<p>
+Whichever download page you choose, please follow the instructions on those pages closely!
+</p>
+
+<h3 class="subtitle">Should there be easier installations?</h3>
+
+<p>
+Very probably there should. GIMP being free software and all, you are entirely welcome to make such an easy installation and report to us when you have made it.
+</p>
+
+<h3 class="subtitle">Other GIMPs for Windows</h3>
+
+<p>
+We have seen a few reports of people building GIMP under CygWin (which is a sort of Unix that runs in a console on the Windows desktop). If anyone could tell us some more about this, we could report it on these pages.
+</p>
+
+<h3 class="subtitle">Starting with the GIMP</h3>
+
+<p>
+The GIMP is an incredibly complex tool that rivals expensive, high-end software in the richness of its feature set. It can be quite daunting to start learning to use the GIMP.
+</p>
+
+<p>
+Fortunately, others that had to go through the same thing decided to make things easier by compiling short introductions to the GIMP. We will link to a few of them from here.
+</p>
+
+<p>
+First, we ask you to read the tips that appear at start-up. There's a lot of information in there.
+</p>
+
+<p>
+...
+</p>
+
+<h3 class="subtitle">More to be included on this page</h3>
+
+<ul>
+<li>Installation Instructions</li>
+<li>Mailing Lists & other Windows-specific links</li>
+<li>FAQ's</li>
+<li>How-To's</li>
+<li>Migrating from other tools to the GIMP</li>
+<li>a clear instruction of how to check for and file BUG REPORTS</li>
+<li>a small GETTING STARTED tutorial</li>
+<li>a small list of the THINGS that WinGIMP DOES NOT SUPPORT compared 
+with the other versions (like skinning and perl-fu)</li>
+<li>links to EXTRAS that are not included in the current distribution (plug-ins compiled for Windows and such)</li>
+</ul>
 
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
