i added the unix directory.  i copied the gimprc and the gtkrc from my /usr/local/etc/gimp/1.2/.  i made some unformatted html for them.  i don't know if this will fly or not. might be nice to have an rc style for these things.  i decided to have different rc files for the different oses so that we have the option to add extra comments to each if necessary.
i used man2html to convert the various gimp manpages to html.

i modified unix.html to see these.

--- a/unix.html
+++ b/unix.html
@@ -1,9 +1,31 @@
-<!--#include virtual="/includes/header_pretitle.inc" -->
+<!--#include virtual="/includes/header.inc" -->
 <title>GIMP - GIMP for Unix</title>
-<!--#include virtual="/includes/header_posttitle.inc" -->
 <!--#include virtual="/includes/menu.inc" -->
 
 <div class="heading">GIMP for Unix</div>
+<div class="subtitle"><a href="unix/INSTALL">Installation Instructions</a></div>
+<div class="subtitle"><a href="FIXME">FAQ's</a></div>
+<div class="subtitle">Linux How To's</div>
+  <ul>
+    <li><a href="unix/howtos/cvs-stable.html">Get and Build CVS GIMP 1.2</a></li>
+  </ul>
+<div class="subtitle">The GIMP's Documentation</div>
+<p>
+</p>
+  <ul>
+    <li>Help Documentation</li>
+    <li><a href="unix/man-gimp-1.2.html">man gimp</a></li>
+    <li><a href="unix/man-gimptool-1.2.html">man gimptool</a></li>
+    <li><a href="unix/man-gimprc.1.html">man gimprc</a></li>
+    <li><a href="unix/man-gimp-remote-1.2.html">man gimp-remote</a></li>
+  </ul>
+<div class="subtitle">The GIMP's Preferences</div>
+  <ul>
+    <li>user_install</li>
+    <li>File --&gt;Preferences</li>
+    <li><a href="unix/gimprc.html">gimprc</a></li>
+    <li><a href="unix/gtkrc.html">gtkrc</a></li>
+  </ul>
 
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
