added Guest Lecturer to the team.  awaiting new names in the ChangeLog to make the team list bigger and more wuvvy.  :)

--- a/team.html
+++ b/team.html
@@ -13,6 +13,7 @@
   <li>Web Designer, Ville Pätsi</li>
   <li>Web Technician, Henrik Brix Andersen</li>
   <li>Web Coordinator, Carol Spears</li>
+  <li>Guest Lecturer, Mannish Singh</li>
 </ul>
 
 <!--#include virtual="/includes/linkbar.inc" -->
