i fixed the stuff at the top that i missed the first time.

--- a/unix.html
+++ b/unix.html
@@ -1,6 +1,6 @@
-<!--#include virtual="/includes/header.inc" -->
+<!--#include virtual="/includes/header_pretitle.inc" -->
 <title>GIMP - GIMP for Unix</title>
-<!--#include virtual="/includes/menu.inc" -->
+<!--#include virtual="/includes/header_posttitle.inc" -->
 
 <div class="heading">GIMP for Unix</div>
 <div class="subtitle"><a href="unix/INSTALL">Installation Instructions</a></div>
