added a url to the recently upload gimp-help directory

--- a/unix.html
+++ b/unix.html
@@ -9,7 +9,7 @@
   <ul>
     <li><a href="unix/howtos/cvs-stable.html">Get and Build CVS GIMP 1.2</a></li>
   </ul>
-<div class="subtitle">The GIMP's Documentation</div>
+<div class="subtitle"><a href="gimp-help">The GIMP's Documentation</div>
 <p>
 </p>
   <ul>
