put the navigation back on

--- a/unix.html
+++ b/unix.html
@@ -1,6 +1,7 @@
 <!--#include virtual="/includes/header_pretitle.inc" -->
 <title>GIMP - GIMP for Unix</title>
 <!--#include virtual="/includes/header_posttitle.inc" -->
+<!--#include virtual="/includes/menu.inc" -->
 
 <div class="heading">GIMP for Unix</div>
 <div class="subtitle"><a href="unix/INSTALL">Installation Instructions</a></div>
