put url in the proper place this time. i will sleep before i do more.

--- a/unix.html
+++ b/unix.html
@@ -10,11 +10,11 @@
   <ul>
     <li><a href="unix/howtos/cvs-stable.html">Get and Build CVS GIMP 1.2</a></li>
   </ul>
-<div class="subtitle"><a href="gimp-help">The GIMP's Documentation</div>
+<div class="subtitle">The GIMP's Documentation</div>
 <p>
 </p>
   <ul>
-    <li>Help Documentation</li>
+    <li><a href="gimp-help">Help Documentation</a></li>
     <li><a href="unix/man-gimp-1.2.html">man gimp</a></li>
     <li><a href="unix/man-gimptool-1.2.html">man gimptool</a></li>
     <li><a href="unix/man-gimprc.1.html">man gimprc</a></li>
