put bex name on it

--- a/unix/howtos/cvs-stable.html
+++ b/unix/howtos/cvs-stable.html
@@ -81,7 +81,7 @@
 <!--#include virtual="/includes/tutnavbar.inc" -->
     <div>
       <span id="footerleft">
-        Tutorial &copy; 2002 <a href="mailto:user@host.org">Author Name</a>
+        How To &copy; 2002 <a href="mailto:bex@gimp.org">Rebecca J. Walter</a>
       </span>
       <span id="footerright">
         <a href="mailto:webmaster@gimp.org">webmaster@gimp.org</a>
