added name attributes to the url lists in about.html so that hopefully they can be maintained along with the main url list.
added branko to the webteam! yay! i love a first commit!!

--- a/about.html
+++ b/about.html
@@ -14,7 +14,7 @@
   (<a href="about/introduction.html">more ...</a>)
 </p>
 <div class="subtitle">Important URLs</div>
-  <ul>
+  <ul name="urls-important">
     <li><a href="http://www.gimp.org">The GNU Image Manipulation Program</a></li>
     <li><a href="http://www.gnu.org/">GNU Project</a></li>
     <li><a href="http://bug.gimp.org/">GIMP Bugzilla</a></li>
@@ -23,32 +23,47 @@
 <div class="subtitle"><a href="about/awards.html">Awards won by The GIMP</a></div>
 <div class="subtitle">The GIMP in the Real World</div>
 <p>The GIMP In Education</p>
-  <ul>
+  <ul name="urls-news-education">
     <li><a href="FIXME">some news or report item</a></li>
     <li><a href="FIXME">some news or report item</a></li>
     <li><a href="FIXME">some news or report item</a></li>
   </ul>
 <p>The GIMP On the Web</p>
-  <ul>
+  <ul name="urls-web">
     <li><a href="http://www.flamingtext.com">Flamming Text Logo Generator</a></li>
     <li><a href="http://www.cooltext.com">Cooltext Logo Generator</a></li>
   </ul>
 <p>The GIMP In Film</p>
-  <ul>
+  <ul name="urls-news-film">
     <li><a href="http://www.linuxjournal.com/article.php?sid=6148">Linux and &lt;i&gt;Scoopy-Doo&lt;/i&gt;</a></li>
   </ul>
 <p>The GIMP In Medicine &amp; Science</p>
-  <ul>
+  <ul name="urls-news-science">
     <li><a href="http://lists.xcf.berkeley.edu/lists/gimp-developer/2001-August/005513.html">Particle Size Analysis</a></li>
     <li><a href="FIXME">The GIMP edge detect for X-Rays</a></li>
   </ul>
 <p>The GIMP In Electronics</p>
+  <ul name="urls-news-electronics">
+    <li><a href="FIXME">some news or report item</a></li>
+    <li><a href="FIXME">some news or report item</a></li>
+    <li><a href="FIXME">some news or report item</a></li>
+  </ul>
 <p>The GIMP In the Corporate World</p>
+  <ul name="urls-news-corporate">
+    <li><a href="FIXME">some news or report item</a></li>
+    <li><a href="FIXME">some news or report item</a></li>
+    <li><a href="FIXME">some news or report item</a></li>
+  </ul>
 <p>The GIMP In the Computer World</p>
-  <ul>
+  <ul name="urls-news-computer">
     <li><a href="http://www.advogato.org/article/550.html">The GIMP Transcends Bias</a></li>
   </ul>
 <p>The GIMP In Commercial Art</p>
+  <ul name="urls-news-arts">
+    <li><a href="FIXME">some news or report item</a></li>
+    <li><a href="FIXME">some news or report item</a></li>
+    <li><a href="FIXME">some news or report item</a></li>
+  </ul>
 <div class="subtitle"><a href="about/history.html">History of The GIMP</a></div>
   <ul>
     <li><a href="http://www.gimp.org/~sjburges/gimp-history.html">ancient history</a></li>
