--- a/team.html
+++ b/team.html
@@ -14,6 +14,7 @@
   <li>Web Technician, Henrik Brix Andersen</li>
   <li>Web Coordinator, Carol Spears</li>
   <li>Guest Lecturer, Manish Singh</li>
+  <li>Contributer, Branko Collins</li>
 </ul>
 
 <!--#include virtual="/includes/linkbar.inc" -->
