--- a/windows/download.html
+++ b/windows/download.html
@@ -25,7 +25,7 @@ The easiest GIMP download can probably be found at <a href="http://www2.arnes.si
 </p>
 
 <p>
-Whichever download page you choose, please follow the instructions on those pages closely!
+Whichever download page you choose, please follow the installation instructions on those pages closely!
 </p>
 
 <h3 class="subtitle">Should there be easier installations?</h3>
