--- a/unix/man-gimp-1.2.html
+++ b/unix/man-gimp-1.2.html
@@ -8,7 +8,6 @@ DIV.section {margin-left:2cm}
 </HEAD><BODY>
 <H1>GIMP</H1>
 Section: GIMP Manual Pages (1)<BR>Updated: 23 June 2000<BR><A HREF="#index">Index</A>
-<BR><A HREF="/cgi-bin/man2html">Return to Main Contents</A>
 <HR>
 
 <A NAME="lbAB">&nbsp;</A>
@@ -337,11 +336,11 @@ Lauri Alanko, Shawn Amundson, Sven Anders, Karl-Johan Andersson, John Beale, Zac
 <A NAME="lbAL">&nbsp;</A>
 <H2>SEE ALSO</H2>
 
-<B><A HREF="/cgi-bin/man2html?gimprc+5">gimprc</A></B>(5),
+<B><A HREF="man-gimprc.1.html">gimprc</A></B>(5),
 
-<B><A HREF="/cgi-bin/man2html?gimptool+1">gimptool</A></B>(1),
+<B><A HREF="man-gimptool-1.2.html">gimptool</A></B>(1),
 
-<B><A HREF="/cgi-bin/man2html?gimp-remote+1">gimp-remote</A></B>(1)
+<B><A HREF="man-gimp-remote-1.2.html">gimp-remote</A></B>(1)
 
 
 <HR>
