updated hrefs to reflect new file location

--- a/unix/index.html
+++ b/unix/index.html
@@ -4,26 +4,26 @@
 <!--#include virtual="/includes/menu.inc" -->
 
 <div class="heading">GIMP for Unix</div>
-<div class="subtitle"><a href="unix/INSTALL">Installation Instructions</a></div>
+<div class="subtitle"><a href="INSTALL">Installation Instructions</a></div>
 <div class="subtitle"><a href="FIXME">FAQ's</a></div>
 <div class="subtitle">Linux How To's</div>
   <ul>
-    <li><a href="unix/howtos/cvs-stable.html">Get and Build CVS GIMP 1.2</a></li>
+    <li><a href="howtos/cvs-stable.html">Get and Build CVS GIMP 1.2</a></li>
   </ul>
 <div class="subtitle">The GIMP's Documentation</div>
   <ul>
     <li><a href="gimp-help">Help Documentation</a></li>
-    <li><a href="unix/man-gimp-1.2.html">man gimp</a></li>
-    <li><a href="unix/man-gimptool-1.2.html">man gimptool</a></li>
-    <li><a href="unix/man-gimprc.1.html">man gimprc</a></li>
-    <li><a href="unix/man-gimp-remote-1.2.html">man gimp-remote</a></li>
+    <li><a href="man-gimp-1.2.html">man gimp</a></li>
+    <li><a href="man-gimptool-1.2.html">man gimptool</a></li>
+    <li><a href="man-gimprc.1.html">man gimprc</a></li>
+    <li><a href="man-gimp-remote-1.2.html">man gimp-remote</a></li>
   </ul>
 <div class="subtitle">The GIMP's Preferences</div>
   <ul>
     <li>user_install</li>
     <li>File --&gt;Preferences</li>
-    <li><a href="unix/gimprc.html">gimprc</a></li>
-    <li><a href="unix/gtkrc.html">gtkrc</a></li>
+    <li><a href="gimprc.html">gimprc</a></li>
+    <li><a href="gtkrc.html">gtkrc</a></li>
   </ul>
 
 <!--#include virtual="/includes/linkbar.inc" -->
