--- a/about/index.html
+++ b/about/index.html
@@ -4,14 +4,14 @@
 <!--#include virtual="/includes/menu.inc" -->
 
 <div class="heading">About GIMP</div>
-<div class="subtitle"><a href="about/introduction.html">Introduction to The GIMP</a></div>
+<div class="subtitle"><a href="introduction.html">Introduction to The GIMP</a></div>
 <p>
   GIMP is an acronym for GNU Image Manipulation Program. It
   is a freely distributed program for such tasks
   as photo retouching, image composition and image authoring.
   The terms of usage and rules about copying are clearly listed in the
-  <a name="src-COPYING" href="about/COPYING">GNU GENERAL PUBLIC LICENSE</a>.
-  (<a href="about/introduction.html">more ...</a>)
+  <a name="src-COPYING" href="COPYING">GNU GENERAL PUBLIC LICENSE</a>.
+  (<a href="introduction.html">more ...</a>)
 </p>
 <div class="subtitle">Important URLs</div>
   <ul name="urls-important">
@@ -20,7 +20,7 @@
     <li><a href="http://bug.gimp.org/">GIMP Bugzilla</a></li>
     <li><a href="http://www.gtk.org/">The Gimp Tool Kit</a></li>
   </ul>
-<div class="subtitle"><a href="about/awards.html">Awards won by The GIMP</a></div>
+<div class="subtitle"><a href="awards.html">Awards won by The GIMP</a></div>
 <div class="subtitle">The GIMP in the Real World</div>
 <p>The GIMP In Education</p>
   <ul name="urls-news-education">
@@ -64,19 +64,19 @@
     <li><a href="FIXME">some news or report item</a></li>
     <li><a href="FIXME">some news or report item</a></li>
   </ul>
-<div class="subtitle"><a href="about/history.html">History of The GIMP</a></div>
+<div class="subtitle"><a href="history.html">History of The GIMP</a></div>
   <ul>
     <li><a href="http://www.gimp.org/~sjburges/gimp-history.html">ancient history</a></li>
-    <li><a name="src-change10" href="about/ChangeLog.pre-1-0">ChangeLog.pre-1-0</a></li>
-    <li><a name="src-change12" href="about/ChangeLog.pre-1-2">ChangeLog.pre-1-2</a></li>
+    <li><a name="src-change10" href="ChangeLog.pre-1-0">ChangeLog.pre-1-0</a></li>
+    <li><a name="src-change12" href="ChangeLog.pre-1-2">ChangeLog.pre-1-2</a></li>
   </ul>
 <div class="subtitle">The GIMP Authors</div>
   <ul>
-    <li><a name="src-authors" href="about/AUTHORS">Authors and Contributors</a></li>
-    <li><a name="src-maintainers" href="about/MAINTAINERS">Maintainers</a></li>
-    <li><a name="src-pmaintainers" href="about/PLUGIN_MAINTAINERS">Plug-in Maintainers</a></li>
+    <li><a name="src-authors" href="AUTHORS">Authors and Contributors</a></li>
+    <li><a name="src-maintainers" href="MAINTAINERS">Maintainers</a></li>
+    <li><a name="src-pmaintainers" href="PLUGIN_MAINTAINERS">Plug-in Maintainers</a></li>
   </ul>
-<div class="subtitle"><a href="about/screenshots.html">Screen Shots</a></div>
-<div class="subtitle"><a href="about/mediakit.html">Media Kit</a></div>
+<div class="subtitle"><a href="screenshots.html">Screen Shots</a></div>
+<div class="subtitle"><a href="mediakit.html">Media Kit</a></div>
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
