--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -7,12 +7,12 @@
 
 <div class="subtitle">Beginner</div>
 <p>
-  <a href="tutorials/The_Basics/">The Basics</a>
+  <a href="The_Basics/">The Basics</a>
 </p>
 
 <div class="subtitle">Photo Retouching</div>
 <p>
-  <a href="tutorials/Anti-Aliased_Treshold/">Anti-Aliased Treshold</a> Maybe we should add an icon/image?
+  <a href="Anti-Aliased_Treshold/">Anti-Aliased Treshold</a> Maybe we should add an icon/image?
   Description goes here, Description goes here, Description goes here, Description goes here, 
   Description goes here, Description goes here, Description goes here, Description goes here, 
 </p>
