lost some </a> tags somewhere. they are back now.

--- a/resources/index.html
+++ b/resources/index.html
@@ -10,8 +10,8 @@
 </p>
 <ul>
   <li><a href="brushes/index.html">Brushes</a></li>
-  <li><a href="devel-docs.html">Developer Docs</li>
-  <li><a href="fractralexplorer/index.html">Fractalexplorer</li>
+  <li><a href="devel-docs.html">Developer Docs</a></li>
+  <li><a href="fractralexplorer/index.html">Fractalexplorer</a></li>
   <li><a href="gfig/index.html">gFig</a></li>
   <li><a href="gflare/index.html">gFlare</a></li>
   <li><a href="gimpressionist/index.html">GIMPressionist</a></li>
