--- a/resources/index.html
+++ b/resources/index.html
@@ -10,7 +10,7 @@
 </p>
 <ul>
   <li><a href="brushes/index.html">Brushes</a></li>
-  <li><a href="devel-docs.html">Developer Docs</a></li>
+  <li><a href="devel-docs/index.html">Developer Docs</a></li>
   <li><a href="fractralexplorer/index.html">Fractalexplorer</a></li>
   <li><a href="gfig/index.html">gFig</a></li>
   <li><a href="gflare/index.html">gFlare</a></li>
