--- a/bugs/index.html
+++ b/bugs/index.html
@@ -1,9 +1,9 @@
 <!--#include virtual="/includes/header_pretitle.inc" -->
-<title>GIMP - Script Authoring</title>
+<title>GIMP - Bugs</title>
 <!--#include virtual="/includes/header_posttitle.inc" -->
 <!--#include virtual="/includes/menu.inc" -->
 
-<div class="heading">Script Authoring</div>
+<div class="heading">Bugs</div>
 
 <!--#include virtual="/includes/linkbar.inc" -->
 <!--#include virtual="/includes/footer.inc" -->
