--- a/resources/brushes/index.html
+++ b/resources/brushes/index.html
@@ -8,22 +8,56 @@
 <p>
   *.gbr from /usr/local/share/gimp/1.2/brushes/*.gbr
 </p>
-<ul name="src-brushes-gbr">
-  <li>brushname</li>
-  <li>brushname</li>
-  <li>brushname</li>
-  <li>brushname</li>
-</ul>
-<div class="subtitle">Animated Brushes That Come With The GIMP</div>
-<p>
-  *.gbr from /usr/local/share/gimp/1.2/brushes/*.gih
-</p>
-<ul name="src-brushes-gih">
-  <li>brushname</li>
-  <li>brushname</li>
-  <li>brushname</li>
-  <li>brushname</li>
-</ul>
+    <p>Calligraphic Brush</p>
+    <p>Calligraphic Brush#2</p>
+    <p>Calligraphic Brush#3</p>
+    <p>Calligraphic Brush#4</p>
+    <p>Circle (01) (1 x 1)</p>
+    <p>Circle (03) (3 x 3)</p>
+    <p>Circle (05) (5 x 5)</p>
+    <p>Circle (07) (7 x 7)</p>
+    <p>Circle (03) (3 x 3)</p>
+    <p>Circle (09) (9 x 9)</p>
+    <p>Circle (11) (11 x 11)</p>
+    <p>Circle (13) (13 x 13)</p>
+    <p>Circle (15) (15 x 15)</p>
+    <p>Circle (17) (17 x 17)</p>
+    <p>Circle (19) (19 x 19)</p>
+    <p>Circle Fuzzy (03) (3 x 3)</p>
+    <p>Circle Fuzzy (05) (5 x 5)</p>
+    <p>Circle Fuzzy (07) (7 x 7)</p>
+    <p>Circle Fuzzy (09) (9 x 9)</p>
+    <p>Circle Fuzzy (11) (11 x 11)</p>
+    <p>Circle Fuzzy (13) (13 x 13)</p>
+    <p>Circle Fuzzy (15) (15 x 15)</p>
+    <p>Circle Fuzzy (17) (17 x 17)</p>
+    <p>Circle Fuzzy (19) (19 x 19)</p>
+    <p>Confetti</p>
+    <p>Diagonal Star (11) (11 x 11)</p>
+    <p>Diagonal Star (17) (17 x 17)</p>
+    <p>Diagonal Star (25) (25 x 25)</p>
+    <p>Felt Pen (30 x 30)</p>
+    <p>Gimp Brush (55 x 45)</p>
+    <p>Galaxy (AP) (53 x 49)</p>
+    <p>Galaxy Big (100 x 100)</p>
+    <p>Galaxy, Small (AP) (27 x 26)</p>
+    <p>Pencil Sketch (16 x 16)</p>
+    <p>Pencil Sketch#2 (32 x 32)</p>
+    <p>Pencil Sketch#3 (64 x 64)</p>
+    <p>Pepper (49 x 61)</p>
+    <p>Property of XCF! (100 x 44)</p>
+    <p>Sand Dunes (AP) (33 x 32)</p>
+    <p>Sparks (60 x 60)</p>
+    <p>Vine (77 x 71)</p>
+    <p>animated Confetti (27 x 28)</p>
+    <p>pixel (1 x 1 square)</p>
+    <p>square (10 x 10)</p>
+    <p>square blur (10 x 10)</p>
+    <p>square (20 x 20)</p>
+    <p>square blur (20 x 20)</p>
+    <p>square (5 x 5)</p>
+    <p>square blur (5 x 5)</p>
+</div>
 <div class="subtitle">How To Make Your Own Classic Brushes</div>
 <p>
   something both comprehensible and inspiring that mentions saving as gbr in
@@ -33,18 +67,32 @@
   Tutorials That Explain Further
 </p>
 <ul name="urls-brushes-gbr">
-  <li>brushname</li>
+  <li><a href="tutorial-url">tutorial name</li>
+  <li><a href="tutorial-url">tutorial name</li>
 </ul>
+<div class="subtitle">Animated Brushes That Come With The GIMP</div>
+<p>
+  *.gih from /usr/local/share/gimp/1.2/brushes/*.gih
+</p>
+    <p class="small">Felt Pen</p>
+    <p class="small">Pencil Sketch</p>
+    <p class="small">Pencil Sketch 2</p>
+    <p class="small">Pencil Sketch 3</p>
+    <p class="small">Sparks</p>
+    <p class="small">Vine</p>
+    <p class="small">animated Confetti</p>
 <div class="subtitle">How To Make Your Own Animated Brushes</div>
 <p>
   something both comprehensible and inspiring (and brief) that mentions saving 
-  as gbr in ~/.gimp-1.2/brushes/ directory.
+  as gih in ~/.gimp-1.2/brushes/ directory. and something about the different
+  fields that need to be filled in and how they work.
 </p>
 <p>
   Tutorials That Explain Further
 </p>
 <ul name="urls-brushes-gih">
-  <li>brushname</li>
+  <li><a href="tutorial-url">tutorial name</li>
+  <li><a href="tutorial-url">tutorial name</li>
 </ul>
 
 <!--#include virtual="/includes/linkbar.inc" -->
