--- a/resources/brushes/index.html
+++ b/resources/brushes/index.html
@@ -67,13 +67,13 @@
 <p>
   *.gih from /usr/local/share/gimp/1.2/brushes/*.gih
 </p>
-    <p class="small">Felt Pen</p>
-    <p class="small">Pencil Sketch</p>
-    <p class="small">Pencil Sketch 2</p>
-    <p class="small">Pencil Sketch 3</p>
-    <p class="small">Sparks</p>
-    <p class="small">Vine</p>
-    <p class="small">animated Confetti</p>
+   <p>Felt Pen</p>
+   <p>Pencil Sketch</p>
+   <p>Pencil Sketch 2</p>
+   <p>Pencil Sketch 3</p>
+   <p>Sparks</p>
+   <p>Vine</p>
+      <p>animated Confetti</p>
 <div class="subtitle">How To Make Your Own Animated Brushes</div>
 <p>
   something both comprehensible and inspiring (and brief) that mentions saving 
