added some additional instructions, or wishes to the needs to be edited text on this page.

--- a/resources/brushes/index.html
+++ b/resources/brushes/index.html
@@ -6,7 +6,8 @@
 <div class="heading">Resources - Brushes</div>
 <div class="subtitle">Classic Brushes That Come With The GIMP</div>
 <p>
-  *.gbr from /usr/local/share/gimp/1.2/brushes/*.gbr
+  *.gbr from /usr/local/share/gimp/1.2/brushes/*.gbr someone should 
+  get this from the gimp source when a new tarball is made.
 </p>
     <p>Calligraphic Brush</p>
     <p>Calligraphic Brush#2</p>
@@ -65,7 +66,8 @@
 </ul>
 <div class="subtitle">Animated Brushes That Come With The GIMP</div>
 <p>
-  *.gih from /usr/local/share/gimp/1.2/brushes/*.gih
+  *.gih from /usr/local/share/gimp/1.2/brushes/*.gih  someone should 
+  get this from the gimp source when a new tarball is made.
 </p>
    <p>Felt Pen</p>
    <p>Pencil Sketch</p>
@@ -78,7 +80,7 @@
 <p>
   something both comprehensible and inspiring (and brief) that mentions saving 
   as gih in ~/.gimp-1.2/brushes/ directory. and something about the different
-  fields that need to be filled in and how they work.
+  fields that need to be filled in and how they work. 
 </p>
 <p>
   Tutorials That Explain Further
