i need to work on this online so i can check before i commit. two stupid </a> tags added

--- a/resources/brushes/index.html
+++ b/resources/brushes/index.html
@@ -61,8 +61,8 @@
   Tutorials That Explain Further
 </p>
 <ul name="urls-brushes-gbr">
-  <li><a href="tutorial-url">tutorial name</li>
-  <li><a href="tutorial-url">tutorial name</li>
+  <li><a href="tutorial-url">tutorial name</a></li>
+  <li><a href="tutorial-url">tutorial name</a></li>
 </ul>
 <div class="subtitle">Animated Brushes That Come With The GIMP</div>
 <p>
@@ -75,7 +75,7 @@
    <p>Pencil Sketch 3</p>
    <p>Sparks</p>
    <p>Vine</p>
-      <p>animated Confetti</p>
+   <p>animated Confetti</p>
 <div class="subtitle">How To Make Your Own Animated Brushes</div>
 <p>
   something both comprehensible and inspiring (and brief) that mentions saving 
@@ -86,8 +86,8 @@
   Tutorials That Explain Further
 </p>
 <ul name="urls-brushes-gih">
-  <li><a href="tutorial-url">tutorial name</li>
-  <li><a href="tutorial-url">tutorial name</li>
+  <li><a href="tutorial-url">tutorial name</a></li>
+  <li><a href="tutorial-url">tutorial name</a></li>
 </ul>
 
 <!--#include virtual="/includes/linkbar.inc" -->
