i fixed the tags, this time on a different file.
the titles have been put on the tutorials index page.  descriptions prolly
need major help, especially towards the end.

--- a/resources/devel-docs/index.html
+++ b/resources/devel-docs/index.html
@@ -10,10 +10,10 @@
   Soon, someone will list them
 </p>
 <ul name="src-devdocs">
-  <li><a href="title-name.html">title name</li>
-  <li><a href="title-name.html">title name</li>
-  <li><a href="title-name.html">title name</li>
-  <li><a href="title-name.html">title name</li>
+  <li><a href="title-name.html">title name</a></li>
+  <li><a href="title-name.html">title name</a></li>
+  <li><a href="title-name.html">title name</a></li>
+  <li><a href="title-name.html">title name</a></li>
 </ul>
 <div class="subtitle">Software Needed to Build</div>
 <p>
