--- a/tutorials/index.html
+++ b/tutorials/index.html
@@ -7,14 +7,118 @@
 
 <div class="subtitle">Beginner</div>
 <p>
-  <a href="The_Basics/">The Basics</a>
+  <a href="Straight_Lines/">Straight Lines</a>'Tis somewhat rude. Perhaps the
+  exact right frame of mind which to approach The GIMP with though, at least 
+  the first few times ....
 </p>
-
-<div class="subtitle">Photo Retouching</div>
 <p>
-  <a href="Anti-Aliased_Treshold/">Anti-Aliased Treshold</a> Maybe we should add an icon/image?
-  Description goes here, Description goes here, Description goes here, Description goes here, 
-  Description goes here, Description goes here, Description goes here, Description goes here, 
+  <a href="The_Basics/">The Basics</a>The famous &quot;GIMP Floating Logos&quot; 
+  rescued from the original GIMP web site and slightly modified to fit here.  Even
+  if you hate images of text on the web, this tutorial gives you some of the basic
+  layer manipulation techniques.  The knowledge can be applied to many many imaging
+  projects and the logo *is* pretty cool ... 
+</p>
+<p>
+  <a href="Making_Selections/">Making Selections</a> Maybe someone could write an 
+  an overview of the various selection tools and options. 
+</p>
+<p>
+  <a href="Borders_On_Selections/">Borders On Selections</a> Use curves and modes
+  to transform your photo into a pen and ink watercolor like image. 
+</p>
+<p>
+  <a href="Anti-Aliased_Treshold/">Anti-Aliased Treshold</a> Use curves and modes
+  to transform your photo into a pen and ink watercolor like image. 
+</p>
+<p>
+  <a href="Bezier_Curves/">Bezier Curves</a> Use bezier curves like The GIMP Masters do.
+</p>
+<p>
+  <a href="Quickmask/">Quickmask</a> Use Quickmask to make a vignette of your photos.
+</p>
+<p>
+  <a href="Red_Eye_Removal/">Red Eye Tutorial</a>Use the Channel Dialog in one method
+  of removing red eye from photos.
+</p>
+<p>
+  <a href="Custom_Brushes/">Custom Brushes</a>Make custom brushes for your GIMP.
+</p>
+<div class="subtitle">Intermediate</div>
+<p>
+  <a href="Drawing_Shapes/">Drawing Shapes With Bezier</a> Make a dimensional box
+  with bezier curves and gradients.
+</p>
+<p>
+  <a href="Film_Grain/">Film Grain</a> Give your photos the appearence of film grain
+  and learn about a new mode.
+</p>
+<p>
+  <a href="Changing_Background_Color_1/">Changing Background Color 1</a> Change the
+  background color of your image and learn the magical properties of color2alpha.
+</p>
+<p>
+  <a href="Changing_Background_Color_2/">Changing Background Color 2</a> Change the
+  background color of your image and learn the magical properties of Select By Color.
+</p>
+<p>
+  <a href="Photo_Image_Editing/">Photo Image Editing</a> A series of methods for 
+  professional photo editing. 
+</p>
+<p>
+  <a href="Coloring_A_BW_Sketch/">Coloring_A_BW_Sketch</a> Color sketches anime style.
+</p>
+<p>
+  <a href="3d_Logo/">3-d Floating Logo</a> Another GIMP Floating Logo method, this one uses modes
+  along with layers and select tools.
+</p>
+<p>
+  <a href="Tileable_Textures/"></a> Learn about gradients, animated brushes and
+  how to make tileable images as well.
+</p>
+<div class="subtitle">Expert</div>
+<p>
+  <a href="Image_Pipes/">Make GIMP Image Pipes</a> Rank and Dimension.  The GIMP's
+  Image Pipes can do alot.  
+</p>
+<p>
+  <a href="Image_Pipes2/">Make GIMP Image Pipes 2</a> Even more options for pipe
+  creation.
+</p>
+<p>
+  <a href="Golden_Text/">Golden Text</a> Make beautiful golden text and learn about
+  the curves dialog and other color options.
+</p>
+<p>
+  <a href="Draw_A_Paint_Brush/">Draw A Paint Brush</a> Put it all together and work
+  your GIMP like the masters do.
+</p>
+<p>
+  <a href="Animation/">Simple and Complex Animations</a> The GIMP animates also.
+</p>
+<div class="subtitle">Script Authoring (Presented Alphabetically)</div>
+<p>
+  <a href="Script_Image/">Working With The Image</a> Before you script, know what an
+  image is and isn't and what a drawable is. Or at least be able to take a good guess
+  about it ...
+</p>
+<p>
+  <a href="Basic_Perl/">Basic GIMP Perl</a> Learn how to write simple perl scripts
+  using the gimp-perl module (linux users only).
+</p>
+<p>
+  <a href="Perl-Debugged/">GIMP-Perl Debugged</a>  Ways to debug your gimp-perl
+  scripts.
+</p>
+<p>
+  <a href="Python_Docbook/">GIMP-Python Docs</a> GIMPython is cool. Some one needs
+  to write a fun little tut for it.  Meanwhile, we have the authors perfect docs 
+  (linux users only).
+</p>
+<p>
+  <a href="Basic_Scheme/">GIMP Script-Fu</a> Write Scheme for The GIMP.
+</p>
+<p>
+  <a href="Basic_Scheme2/">GIMP Script-Fu 2</a> Another Write Scheme for The GIMP.
 </p>
 
 
